# hirola

./: .gitignore  Cargo.toml  INSTALATION.md  README.md
.github/workflows/: browser.yml  preview.yml  production.yml  unit.yml
crates/hirola-core/: Cargo.toml
crates/hirola-core/benches/: reactivity.rs  ssr.rs  ssr.rs.old
crates/hirola-core/src/: callback.rs  component.rs  dom.rs  effect.rs  events.rs  flow.rs  generic_node.rs  lib.rs  macros.rs  mixin.rs  mixins.rs  node.rs  props.rs  reactive.rs  render.rs  styled.rs  update.rs  utils.rs  view.rs
crates/hirola-core/src/app/: mod.rs  router.rs
crates/hirola-core/src/builder/: component.rs  fragment.rs  html.rs  mod.rs
crates/hirola-core/src/generic_node/: dom_node.rs  simple_node.rs  ssr_node.rs
crates/hirola-core/src/mixins/: bind.rs  mod.rs
crates/hirola-core/src/reactive/: effect.rs  signal.rs  signal_vec.rs
crates/hirola-core/src/router/: mod.rs
crates/hirola-core/src/templating/: flow.rs  live_fragment.rs  mod.rs  noderef.rs  styled.rs  suspense.rs  switch.rs
crates/hirola-core/tests/integration/: keyed.rs  main.rs  non_keyed.rs  router.rs
crates/hirola-core/tests/ssr/: main.rs
crates/hirola-dom/: Cargo.toml
crates/hirola-dom/src/: effects.rs  lib.rs  mixins.rs  node_ref.rs  noderef.rs  types.rs
crates/hirola-dom/src/app/: mod.rs  router.rs
crates/hirola-dom/tests/integration/: main.rs  non_keyed.rs  router.rs
crates/hirola-form/: Cargo.toml
crates/hirola-form/src/: bind.rs  lib.rs  model.rs
crates/hirola-kit/: Cargo.toml  README.md
crates/hirola-kit/src/: main.rs
crates/hirola-kit/src/formatter/: collect.rs  html_macro.rs  mod.rs  source_file.rs  test_helpers.rs
crates/hirola-kit/src/formatter/format/: attribute.rs  element.rs  expr.rs  fragment.rs  mac.rs  mod.rs  node.rs
crates/hirola-macros/: Cargo.toml
crates/hirola-macros/src/: component.rs  lib.rs  libx.rs  node.rs
crates/hirola-macros/tests/: component.rs  lib.rs
crates/hirola-ssr/: Cargo.toml
crates/hirola-ssr/src/: lib.rs
examples/axum/: Cargo.toml
examples/axum/src/: layout.rs  main.rs
examples/canvas/: Cargo.toml
examples/canvas/src/: main.rs  tool.rs
examples/chartjs/: Cargo.toml  index.html
examples/counter/: Cargo.toml  index.html  package.json  rollup.config.js
examples/counter/public/: index.html
examples/counter/src/: comp.rs  lib.rs  main.rs  no_macros.rs
examples/docs/: Cargo.toml  Trunk.toml  index.html
examples/docs/src/: main.rs
examples/docs/src/components/: code_preview.rs  logo.rs  mod.rs  seo_title.rs  side_bar.rs
examples/docs/src/pages/: async_handling.rs  browser_instance.rs  event_handling.rs  extending.rs  form.rs  getting_started.rs  index.md  iteration.rs  mixins.rs  mod.rs  reactivity.rs  router.rs  ssr.rs  state.rs  templating.rs  testing.rs
examples/docs/src/pages/advanced/: async.md  ssr.md  testing.md
examples/docs/src/pages/basics/: events.md  getting-started.md  mixins.md  reactivity.md  state-management.md  templating.md
examples/docs/src/pages/plugins/: form.md  router.md
examples/effects/: Cargo.toml  index.html
examples/effects/src/: main.rs
examples/fake-api/: Cargo.toml  index.html
examples/fake-api/src/: main.rs  model.rs
examples/form/: Cargo.toml  index.html
examples/form/src/: main.rs
examples/mixin/: Cargo.toml
examples/mixin/src/: main.rs
examples/todo/: Cargo.toml  index.html
examples/todo-mvc/: Cargo.toml  index.html
examples/todo-mvc/src/: main.rs  todo.rs
examples/todo/src/: main.rs
examples/x-for/: Cargo.toml  index.html
examples/x-for/src/: main.rs
src/: events.rs  lib.rs
tests/: browser.rs
