[package]
name = "hirola"
version = "0.2.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
description = "Hirola is an un-opinionated web framework that is focused on simplicity and predictability"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://hirola-docs.vercel.app"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]
edition = "2021"

[dependencies]
hirola-core = { path = "crates/hirola-core", version = "0.2.0" }
hirola-macros = { path = "crates/hirola-macros", version = "0.2.0" }
hirola-form = { path = "crates/hirola-form", version = "0.2.0", optional = true }


[features]
default = ["hirola-core/default"]

## Enables serialization of state
serde = ["hirola-core/serde"]

## Enables server side reendering
ssr = ["hirola-core/ssr"]

## Enables Isomorphic Routing
router = ["hirola-core/router"]

## Enables global state management
global-state = ["hirola-core/global-state"]

## Enables async utilities
async = ["hirola-core/async"]

docsrs = ["document-features"]

## Enables form mixins and utilities
form = ["hirola-form"]



[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = { version = "0.2.79" }
hirola = { path = ".", default-features=false, features =["router", "global-state", "ssr"]}

[workspace]
members = [
    "crates/hirola-core",
    "crates/hirola-macros",
    "crates/hirola-form",
    "examples/counter",
    "examples/todo",
    "examples/canvas",
    "examples/fake-api",
    "examples/chartjs",
    "examples/x-for",
    "examples/mixin",
    "examples/form",
    "examples/docs"
]

[dependencies.document-features]
version = "0.2"
optional = true


[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
default-target = "wasm32-unknown-unknown"


[profile.release]
lto = true
opt-level = 's'