[package]
name = "hirola"
version = "0.3.0-alpha.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
description = "Hirola is an un-opinionated web framework that is focused on simplicity and predictability"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://hirola-docs.vercel.app"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]
edition = "2021"

[dependencies]
hirola-core = { path = "crates/hirola-core", version = "0.3.0-alpha.0" }
hirola-macros = { path = "crates/hirola-macros", version = "0.3.0-alpha.0" }
hirola-form = { path = "crates/hirola-form", version = "0.3.0-alpha.0", optional = true }


[features]
default = ["hirola-core/default"]


## Enables dom based rendering
dom = ["hirola-core/dom"]

# ## Enables serialization of state
# serde = ["hirola-core/serde"]

## Enables server side reendering
ssr = ["hirola-core/ssr"]

## Enables app features like isomorphic routing
app = ["hirola-core/app"]

docsrs = ["document-features"]

## Enables form mixins and utilities
form = ["hirola-form"]


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = { version = "0.2.79" }
hirola = { path = ".", default-features = false, features = ["app", "dom"] }
futures-util = "0.3"
web-sys = { version = "0.3", features = ["Document", "Node", "Element"] }

[workspace]
members = [
    "crates/hirola-core",
    "crates/hirola-macros",
    "crates/hirola-form",
    "crates/hirola-kit",
    "examples/counter",
    "examples/todo",
    "examples/canvas",
    "examples/fake-api",
    "examples/chartjs",
    "examples/x-for",
    "examples/mixin",
    "examples/form",
    "examples/docs",
]

[dependencies.document-features]
version = "0.2"
optional = true


[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
all-features = true
default-target = "wasm32-unknown-unknown"


[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true
