[package]
name = "hirola"
version = "0.4.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
description = "Hirola is an un-opinionated web framework that is focused on simplicity and predictability"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://hirola-docs.vercel.app"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]
edition = "2021"

[dependencies]
hirola-core = { path = "crates/hirola-core", version = "0.4.0" }
hirola-macros = { path = "crates/hirola-macros", version = "0.4.0" }
hirola-dom = { path = "crates/hirola-dom", version = "0.4.0", optional = true }
hirola-ssr = { path = "crates/hirola-ssr", version = "0.4.0", optional = true }

[features]
default = ["dom"]
## Enables browser based rendering including websys and wasmbindgen
dom = ["hirola-dom"]

## Enables server side rendering
ssr = ["hirola-ssr"]

docsrs = ["document-features"]


[dev-dependencies]
wasm-bindgen-test = "0.3.39"
wasm-bindgen = { version = "0.2.89" }
hirola = { path = "." }
futures-util = "0.3"
web-sys = { version = "0.3", features = ["Document", "Node", "Element"] }

[workspace]
members = [
    "crates/hirola-core",
    "crates/hirola-macros",
    "crates/hirola-form",
    "crates/hirola-kit",
    "crates/hirola-ssr",
    "crates/hirola-dom",
    "examples/axum",
    "examples/counter",
    "examples/todo-mvc",
    "examples/canvas",
    "examples/fake-api",
    "examples/chartjs",
    "examples/x-for",
    "examples/effects",
    "examples/form",
    "examples/docs",
]

[dependencies.document-features]
version = "0.2"
optional = true


[package.metadata.docs.rs]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
default-target = "wasm32-unknown-unknown"
features = ["docsrs"]


[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true
