[package]
name = "hirola-core"
version = "0.2.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
edition = "2021"
description = "An html library for building client side webapps"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://docs.rs/hirola"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
html-escape = { version = "0.2.7", optional = true }
hirola-macros = { path = "../hirola-macros", version = "0.2.0" }
wasm-bindgen = { version = "0.2" }
matchit = { version = "0.7", optional = true }
wasm-bindgen-futures = { version = "0.4.29" }
futures-signals = "0.3.32"
futures-util = "0.3"
discard = "1"
log = "0.4.6"

[dependencies.web-sys]
features = [
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
]
optional = true
version = "0.3.64"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
wasm-bindgen-test = "0.3"
hirola = { path = "../../" }
web-sys = { version = "0.3", features = ["DomTokenList", "Element", "Window"] }


[features]
default = ["web-sys", "dom"]
dom = []
ssr = ["html-escape"]
app = [
  "matchit",
  "web-sys/History",
  "web-sys/Location",
  "web-sys/HtmlLinkElement",
]


[[bench]]
harness = false
name = "reactivity"

[[bench]]
harness = false
name = "ssr"

[[test]]
name = "ssr"
required-features = ["ssr"]

[package.metadata.docs.rs]
all-features = true
default-target = "wasm32-unknown-unknown"
