[package]
name = "hirola-core"
version = "0.4.0-beta.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
edition = "2021"
description = "An html library for building client side webapps"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://docs.rs/hirola"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures-signals = "0.3.33"
futures-util = "0.3"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
wasm-bindgen-test = "0.3"
hirola = { path = "../../" }
web-sys = { version = "0.3", features = ["DomTokenList", "Element", "Window"] }



# [[bench]]
# harness = false
# name = "reactivity"

# [[bench]]
# harness = false
# name = "ssr"

# [[test]]
# name = "ssr"
# required-features = ["ssr"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
