[package]
name = "hirola-dom"
version = "0.4.0-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2" }
log = "0.4"
hirola-core = { path = "../hirola-core", version = "0.4.0-beta.0" }
matchit = { version = "0.7" }
wasm-bindgen-futures = { version = "0.4.39" }
discard = "1"

[dependencies.web-sys]
features = [
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
  "History",
  "Location"
]
version = "0.3.66"

[dev-dependencies]
hirola = { path = "../../", version = "0.4.0-beta.0" }
wasm-bindgen-test = "0.3.39"
