[package]
name = "hirola-form"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola-core = { path = "../hirola-core", version = "0.1.6" }
wasm-bindgen = {version = "0.2", features= ["serde-serialize"]}
validator = "0.10"
validator_derive = "0.10"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlFormElement",
  "FormData"
]

version = "0.3"
