[package]
name = "hirola-form"
version = "0.3.1"
edition = "2021"
description = "Form mixins and utilities for hirola"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://docs.rs/hirola"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "form", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola-core = { path = "../hirola-core", version = "0.3.1" }
hirola-dom = { path = "../hirola-dom", version = "0.3.1", default-features = false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1"
json_dotpath = "1.1.0"

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlFormElement",
  "FormData",
]

version = "0.3"
