[package]
name = "hirola-form"
version = "v0.4.0"
edition = "2021"
description = "Form mixins and utilities for hirola"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://docs.rs/hirola"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "form", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola-core = { path = "../hirola-core", version = "v0.4.0" }
hirola-macros = { path = "../hirola-macros", version = "v0.4.0" }
hirola-dom = { path = "../hirola-dom", version = "v0.4.0", default-features = false }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0.193", features = ["derive"] }

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlFormElement",
  "FormData",
]

version = "0.3"
