[package]
name = "hirola-kit"
version = "0.1.1"
edition = "2021"
documentation = "https://docs.rs/hirola"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
description = "A CLI for hirola"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptosfmt-pretty-printer = "0.1.8"
rstml = "0.11.2"
syn = { version = "2.0.43", features = [ "visit", "full", "extra-traits" ] }
leptosfmt-prettyplease = { features = [ "verbatim" ], version = "0.2.16" }
proc-macro2 = { version = "1.0.71", features = [ "span-locations" ] }
thiserror = "1.0.52"
crop = "0.4.1"
serde = { version = "1.0.193", features = [ "derive" ] }


# Deps for cli
clap = { version = "4.4.12", features = ["derive"] }
rayon = "1.8.0"
glob = "0.3.1"
anyhow = "1.0.77"
toml = "0.8.8"

[dev-dependencies]
indoc = "2.0.4"
insta = "1.34.0"
quote = "1.0.33"