[package]
name = "hirola-macros"
version = "0.4.0-beta.0"
authors = ["Geoffrey Mureithi <mureithinjuguna@gmail.com>"]
edition = "2021"
description = "Hirola is an un-opinionated web framework that is focused on simplicity and predictability"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://hirola-docs.vercel.app/"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "dom", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = "2.0.43"
rstml = "0.11"
proc-macro-error = "1.0"
proc-macro-hack = "0.5"
paste = { version = "1" }
heck = "0.4.1"

[dev-dependencies]
hirola = { path = "../../" }
trybuild = "1.0"
hirola-ssr = { path = "../hirola-ssr" }
