[package]
name = "hirola-ssr"
version = "0.4.0-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola-core = { path = "../hirola-core", version = "0.4.0-beta.0" }
html-escape = { version = "0.2.13" }


[dev-dependencies]
hirola = { path = "../../", version = "0.4.0-beta.0" }
wasm-bindgen-test = "0.3.39"