[package]
name = "hirola-ssr"
version = "0.4.0-beta.0"
edition = "2021"
description = "Hirola is an un-opinionated web framework that is focused on simplicity and predictability"
repository = "https://github.com/geofmureithi/hirola"
documentation = "https://hirola-docs.vercel.app/"
readme = "../../README.md"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "html", "ssr", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola-core = { path = "../hirola-core", version = "0.4.0-beta.0" }
html-escape = { version = "0.2.13" }


[dev-dependencies]
hirola = { path = "../../", version = "0.4.0-beta.0" }
wasm-bindgen-test = "0.3.39"