[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../", features = ["dom", "app"]}


[dev-dependencies]
wasm-bindgen-test = "0.3.0"
hirola = { path = "../../", default-features=false, features =["dom"]}