[package]
name = "docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../", features =["router", "global-state"]}
wasm-bindgen = {version = "0.2"}


[dependencies.web-sys]
features = [
  "Window",
  "DomTokenList",
  "HtmlInputElement",
]

version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
hirola = { path = "../../", default-features=false, features =["router", "global-state", "ssr"]}