[package]
name = "docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../", features = ["app", "dom", "form"] }
wasm-bindgen = { version = "0.2" }
tower = "0.4"
discard = "1"
wasm-log = "0.3"


[dependencies.web-sys]
features = [
  "Window",
  "DomTokenList",
  "HtmlInputElement",
  "HtmlElement",
  "Node",
  "Document",
  "Text",
  "HtmlButtonElement",
  "History",
  "Location",
  "Event",
]

version = "0.3.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
hirola = { path = "../../", default-features = false, features = [
  "app",
  "ssr",
] }
