[package]
name = "docs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../", default-features = false, features = [
  "app",
  "ssr",
] }
glob = "0.3.1"
comrak = { version = "0.18", features = ["syntect"] }
fronma = "0.2"
serde = { version = "1", features = ["derive"] }
