[package]
name = "fake-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hirola = { path = "../../" }
serde = { version = "1.0.80", features = ["derive"] }
reqwasm = "0.5.0"
hirola-dom = { path = "../../crates/hirola-dom" }

[dependencies.web-sys]
version = "0.3.4"
features = ['Window']
