[package]
name = "form"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../", features = ["form", "dom"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
validator = "0.10"
validator_derive = "0.10"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
features = [
  "console",
  "Comment",
  "Document",
  "DocumentFragment",
  "Element",
  "Event",
  "EventTarget",
  "HtmlElement",
  "Node",
  "Text",
  "Window",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlSelectElement",
  "HtmlFormElement",
  "FormData",
]

version = "0.3"
