[package]
name = "mixin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../" }
wasm-bindgen = { version = "0.2" }

[dependencies.web-sys]
features = ["DomTokenList", "Navigator"]

version = "0.3"
