[package]
name = "todo-mvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../" }
wasm-bindgen = { version = "0.2" }
serde = { version = "1", features = ["derive", "rc"] }
strum = { version = "0.25.0", features = ["derive"] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement", "Storage", "Url", "KeyboardEvent", "CssStyleDeclaration"]
