[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hirola = { path = "../../"}
wasm-bindgen = {version = "0.2"}

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  'HtmlInputElement'
]
